--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
 
     <modules>
         <module>config-service</module>
+        <module>discovery-service</module>
+        <module>gateway-service</module>
+        <module>auth-service</module>
     </modules>
 
     <dependencyManagement>
