--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,10 @@
         <module>config-service</module>
         <module>discovery-service</module>
         <module>gateway-service</module>
+        <module>admin-service</module>
         <module>auth-service</module>
+
+        <module>banco-central-service</module>
     </modules>
 
     <dependencyManagement>
