--- a/admin-service/src/main/resources/bootstrap.yml
+++ b/admin-service/src/main/resources/bootstrap.yml
@@ -1,49 +1,49 @@
-#spring:
-#  application:
-#    name: admin-service
-#  cloud:
-#    config:
-#      uri: http://localhost:9090
-
-server:
-  port: 9094
-
-eureka:
-  instance:
-    hostname: localhost
-    port: 9091
-    # metadata-map:
-    #   user.name: "user"         #These two are needed so that the server
-    #   user.password: "password" #can access the protected client endpoints
-  client:
-    registerWithEureka: true
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
-  server:
-    wait-time-in-ms-when-sync-empty: 3000
-
 spring:
   application:
     name: admin-service
-  profiles:
-    active:
-      - secure
-  boot:
-    admin:
-      context-path: /admin
-      ui:
-        title: Mixed Salad Admin
-  security:
-    user:
-      name: "user"
-      password: "password"
+  cloud:
+    config:
+      uri: http://localhost:9090
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"  #<2>
-  endpoint:
-    health:
-      show-details: ALWAYS
+#server:
+#  port: 9094
+#
+#eureka:
+#  instance:
+#    hostname: localhost
+#    port: 9091
+#    # metadata-map:
+#    #   user.name: "user"         #These two are needed so that the server
+#    #   user.password: "password" #can access the protected client endpoints
+#  client:
+#    registerWithEureka: true
+#    fetchRegistry: false
+#    serviceUrl:
+#      defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
+#  server:
+#    wait-time-in-ms-when-sync-empty: 3000
+#
+#spring:
+#  application:
+#    name: admin-service
+#  profiles:
+#    active:
+#      - secure
+#  boot:
+#    admin:
+#      context-path: /admin
+#      ui:
+#        title: Mixed Salad Admin
+#  security:
+#    user:
+#      name: "user"
+#      password: "password"
+#
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: "*"  #<2>
+#  endpoint:
+#    health:
+#      show-details: ALWAYS
