--- a/banco-central-service/pom.xml
+++ b/banco-central-service/pom.xml
@@ -101,11 +101,11 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>de.codecentric</groupId>-->
-            <!--<artifactId>spring-boot-admin-starter-client</artifactId>-->
-            <!--<version>2.0.4</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>2.0.4</version>
+        </dependency>
 
         <dependency>
             <groupId>org.flywaydb</groupId>
