--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.nosbielc.mixed.salad</groupId>
     <artifactId>admin-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0.05052019</version>
     <packaging>jar</packaging>
 
     <name>admin-service</name>
@@ -98,15 +98,17 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
+
+        <!-- Micrometer Prometheus registry  -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
-
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
 
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -126,6 +128,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
