--- a/admin-service/src/main/resources/bootstrap.yml
+++ b/admin-service/src/main/resources/bootstrap.yml
@@ -47,3 +47,12 @@ spring:
 #  endpoint:
 #    health:
 #      show-details: ALWAYS
+
+info:
+  app:
+    name: "Admin Service"
+    description: "Admin Service - Aplicação de administração dos servicos."
+    version: "1.0.0.05052019"
+    encoding: "UTF-8"
+    java:
+      version: "1.8"
