Inclusão do projeto DashBoard
O projeto ainda esta em estudo e não esta rodando corretamente.

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>gateway-service</module>
         <module>admin-service</module>
         <module>auth-service</module>
+        <module>dashboard-service</module>
 
         <module>banco-central-service</module>
     </modules>
