--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -1,3 +1,20 @@
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:9091/eureka/
+
 spring:
   application:
     name: config-service
+  cloud:
+    boot:
+      admin:
+        client:
+          url: http://localhost:9094/admin
+          username: "user"
+          password: "password"
+
+logging:
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
+  file: config-service.log
