Atualização de Auth-Service
Atualização de Auth-Service

--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -88,7 +88,16 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Micrometer Prometheus registry  -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+        </dependency>
 
     </dependencies>
 
