--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -76,6 +76,11 @@
             <version>2.0.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
