--- a/banco-central-service/pom.xml
+++ b/banco-central-service/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.nosbielc.mixed.salad</groupId>
     <artifactId>banco-central-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0.12052019</version>
     <packaging>jar</packaging>
 
     <name>banco-central-service</name>
@@ -198,7 +198,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.1.1</version>
                 <configuration>
-                    <imageName>${project.name}</imageName>
+                    <imageName>nosbielc/${project.name}</imageName>
                     <baseImage>openjdk:8-jre-alpine</baseImage>
                     <entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
                     <exposes>8001</exposes>
