--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.nosbielc.mixed.salad</groupId>
     <artifactId>config-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0.12052019</version>
     <name>config-service</name>
     <description>Spring Boot Config Service</description>
 
@@ -105,10 +105,10 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.1.1</version>
                 <configuration>
-                    <imageName>${project.name}</imageName>
+                    <imageName>nosbielc/${project.name}</imageName>
                     <baseImage>openjdk:8-jre-alpine</baseImage>
                     <entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
-                    <exposes>8088</exposes>
+                    <exposes>9090</exposes>
                     <resources>
                         <resource>
                             <targetPath>/</targetPath>
