--- a/discovery-service/pom.xml
+++ b/discovery-service/pom.xml
@@ -88,16 +88,24 @@
                 <version>${spring-boot-maven-plugin.version}</version>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+
             <!-- https://github.com/spotify/docker-maven-plugin -->
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.1.1</version>
                 <configuration>
-                    <imageName>${project.name}</imageName>
+                    <imageName>nosbielc/${project.name}</imageName>
                     <baseImage>openjdk:8-jre-alpine</baseImage>
                     <entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
-                    <exposes>8088</exposes>
+                    <exposes>9091</exposes>
                     <resources>
                         <resource>
                             <targetPath>/</targetPath>
