--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.nosbielc.mixed.salad</groupId>
     <artifactId>gateway-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0.12052019</version>
     <name>gateway-service</name>
     <description>Spring Boot Gateway Service</description>
 
@@ -91,16 +91,24 @@
                 <version>${spring-boot-maven-plugin.version}</version>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+
             <!-- https://github.com/spotify/docker-maven-plugin -->
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.1.1</version>
                 <configuration>
-                    <imageName>${project.name}</imageName>
+                    <imageName>nosbielc/${project.name}</imageName>
                     <baseImage>openjdk:8-jre-alpine</baseImage>
                     <entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
-                    <exposes>8088</exposes>
+                    <exposes>9092</exposes>
                     <resources>
                         <resource>
                             <targetPath>/</targetPath>
