--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -111,24 +111,23 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>${project.artifactId}</finalName>
+<!--        <finalName>${project.artifactId}</finalName>-->
         <plugins>
-
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                            <goal>build-info</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <mainClass>com.nosbielc.mixed.salad.admin.AdminApplication</mainClass>
-                    <addResources>false</addResources>
-                </configuration>
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>repackage</goal>-->
+<!--                            <goal>build-info</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    <mainClass>com.nosbielc.mixed.salad.admin.AdminApplication</mainClass>-->
+<!--                    <addResources>false</addResources>-->
+<!--                </configuration>-->
             </plugin>
 
             <plugin>
