--- a/admin-service/src/main/resources/bootstrap-prod.yml
+++ b/admin-service/src/main/resources/bootstrap-prod.yml
@@ -2,10 +2,10 @@ spring:
   application:
     name: admin-service
   profiles:
-    active: @spring.profiles.active@
+    active: prod
   cloud:
     config:
-      uri: http://localhost:9090
+      uri: http://config-service:9090
 
 info:
   app:
