Interação com compose
Interação com compose

--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -146,6 +146,10 @@
                 <configuration>
                     <imageName>nosbielc/${project.name}</imageName>
                     <baseImage>openjdk:8-jre-alpine</baseImage>
+                    <imageTags>
+                        <imageTag>${project.version}</imageTag>
+                        <imageTag>latest</imageTag>
+                    </imageTags>
                     <entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
                     <exposes>9094</exposes>
                     <resources>
