--- a/admin-service/src/main/resources/bootstrap.yml
+++ b/admin-service/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: admin-service
   profiles:
-    active: @spring.profiles.active@
+    active: dev
   cloud:
     config:
       uri: http://localhost:9090
