--- a/banco-central-service/src/main/resources/bootstrap-prod.yml
+++ b/banco-central-service/src/main/resources/bootstrap-prod.yml
@@ -2,10 +2,10 @@ spring:
   application:
     name: banco-central-service
   profiles:
-    active: dev
+    active: prod
   cloud:
     config:
-      uri: http://localhost:9090
+      uri: http://config-service:9090
 pagination:
   qtd_by_page: 100
 range:
