--- a/discovery-service/src/main/resources/bootstrap-prod.yml
+++ b/discovery-service/src/main/resources/bootstrap-prod.yml
@@ -1,12 +1,11 @@
 spring:
   application:
-    name: auth-service
+    name: discovery-service
   profiles:
-    active: dev
+    active: prod
   cloud:
     config:
-      uri: http://localhost:9090
-
+      uri: http://config-service:9090
 info:
   app:
     name: @project.name@
