--- a/gateway-service/src/main/resources/bootstrap.yml
+++ b/gateway-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,16 @@
 spring:
   application:
     name: gateway-service
+  profiles:
+    active: dev
   cloud:
     config:
       uri: http://localhost:9090
+info:
+  app:
+    name: @project.name@
+    description: @project.description@
+    version: @project.version@
+    encoding: @project.build.sourceEncoding@
+    java:
+      version: "1.8"
