--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -3,25 +3,45 @@ version: '3'
 networks:
   msConfig:
   msAdmin:
+  msDiscovery:
+  msBancoCentral:
+  msAuth:
+  msGateway:
+  msZipkin:
 
 services:
 
   config-service:
     image: nosbielc/config-service:latest
     networks:
-      - msConfig
-      - msAdmin
+    - msConfig
+    - msAdmin
+    - msDiscovery
+    - msBancoCentral
+    - msAuth
+    - msGateway
+    - msZipkin
     ports:
       - 9090:9090
     environment:
       - SPRING_PROFILES_ACTIVE=prod,native
     restart: on-failure
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:9090"]
+      interval: 2s
+      timeout: 5s
+      retries: 30
 
   admin-service:
     image: nosbielc/admin-service:latest
     networks:
       - msConfig
       - msAdmin
+      - msDiscovery
+      - msBancoCentral
+      - msAuth
+      - msGateway
+      - msZipkin
     ports:
       - 9094:9094
     environment:
@@ -29,65 +49,109 @@ services:
     restart: on-failure
     depends_on:
       - config-service
-    links:
-      - config-service:config-service
-    command: config-service:9090
-#  discovery-service:
-#    image: nosbielc/discovery-service:latest
-#    network_mode: host
-#    ports:
-#      - 9091:9091
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=prod
-#    depends_on:
-#      - config-service
-#      - admin-service
-#  gateway-service:
-#    image: nosbielc/gateway-service:latest
-#    network_mode: host
-#    ports:
-#      - 9092:9092
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=prod
-#    depends_on:
-#      - config-service
-#      - admin-service
-#      - discovery-service
-#  zipkin-service:
-#    image: nosbielc/zipkin-service:latest
-#    network_mode: host
-#    ports:
-#      - 9095:9095
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=prod
-#    depends_on:
-#      - config-service
-#      - admin-service
-#      - discovery-service
-#      - gateway-service
-#  auth-service:
-#    image: nosbielc/auth-service:latest
-#    network_mode: host
-#    ports:
-#      - 9093:9093
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=prod
-#    depends_on:
-#      - config-service
-#      - admin-service
-#      - discovery-service
-#      - gateway-service
-#      - zipkin-service
-#  banco-central-service:
-#    image: nosbielc/banco-central-service:latest
-#    network_mode: host
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=prod
-#    depends_on:
-#      - config-service
-#      - admin-service
-#      - discovery-service
-#      - gateway-service
-#      - zipkin-service
-#      - auth-service
+
+  discovery-service:
+    image: nosbielc/discovery-service:latest
+    networks:
+      - msConfig
+      - msAdmin
+      - msDiscovery
+      - msBancoCentral
+      - msAuth
+      - msGateway
+      - msZipkin
+    ports:
+      - 9091:9091
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    restart: on-failure
+    depends_on:
+      - config-service
+      - admin-service
+
+  gateway-service:
+    image: nosbielc/gateway-service:latest
+    networks:
+      - msConfig
+      - msAdmin
+      - msDiscovery
+      - msBancoCentral
+      - msAuth
+      - msGateway
+      - msZipkin
+    ports:
+      - 9092:9092
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    restart: on-failure
+    depends_on:
+      - config-service
+      - admin-service
+      - discovery-service
+
+  zipkin-service:
+    image: nosbielc/zipkin-service:latest
+    networks:
+      - msConfig
+      - msAdmin
+      - msDiscovery
+      - msBancoCentral
+      - msAuth
+      - msGateway
+      - msZipkin
+    ports:
+      - 9095:9095
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    restart: on-failure
+    depends_on:
+      - config-service
+      - admin-service
+      - discovery-service
+      - gateway-service
+
+  auth-service:
+    image: nosbielc/auth-service:latest
+    networks:
+      - msConfig
+      - msAdmin
+      - msDiscovery
+      - msBancoCentral
+      - msAuth
+      - msGateway
+      - msZipkin
+    ports:
+      - 9093:9093
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    restart: on-failure
+    depends_on:
+      - config-service
+      - admin-service
+      - discovery-service
+      - gateway-service
+      - zipkin-service
+
+  banco-central-service:
+    image: nosbielc/banco-central-service:latest
+    networks:
+      - msConfig
+      - msAdmin
+      - msDiscovery
+      - msBancoCentral
+      - msAuth
+      - msGateway
+      - msZipkin
+    ports:
+      - "8001-8020"
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    restart: on-failure
+    depends_on:
+      - config-service
+      - admin-service
+      - discovery-service
+      - gateway-service
+      - zipkin-service
+      - auth-service
 
