--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -99,6 +99,14 @@
                 <version>${spring-boot-maven-plugin.version}</version>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+
             <!-- https://github.com/spotify/docker-maven-plugin -->
             <plugin>
                 <groupId>com.spotify</groupId>
@@ -114,11 +122,19 @@
                     <entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
                     <exposes>9090</exposes>
                     <resources>
+
                         <resource>
                             <targetPath>/</targetPath>
                             <directory>${project.build.directory}</directory>
                             <include>${project.build.finalName}.jar</include>
                         </resource>
+
+<!--                        <resource>-->
+<!--                            <targetPath>/</targetPath>-->
+<!--                            <directory>../compose</directory>-->
+<!--                            <include>wait</include>-->
+<!--                        </resource>-->
+
                     </resources>
                 </configuration>
             </plugin>
