--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.nosbielc.mixed.salad</groupId>
     <artifactId>admin-service</artifactId>
-    <version>1.0.0.05052019</version>
+    <version>1.1.0.19052019</version>
     <packaging>jar</packaging>
 
     <name>admin-service</name>
@@ -144,7 +144,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.1.1</version>
                 <configuration>
-                    <imageName>nosbielc/${project.name}</imageName>
+                    <imageName>nosbielc/mixed-salad-${project.name}</imageName>
                     <baseImage>openjdk:8-jre-alpine</baseImage>
                     <imageTags>
                         <imageTag>${project.version}</imageTag>
