--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.nosbielc.mixed.salad</groupId>
     <artifactId>config-service</artifactId>
-    <version>1.0.0.12052019</version>
+    <version>1.1.0.19052019</version>
     <name>config-service</name>
     <description>Spring Boot Config Service</description>
 
@@ -113,7 +113,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.1.1</version>
                 <configuration>
-                    <imageName>nosbielc/${project.name}</imageName>
+                    <imageName>nosbielc/mixed-salad-${project.name}</imageName>
                     <baseImage>openjdk:8-jre-alpine</baseImage>
                     <imageTags>
                         <imageTag>${project.version}</imageTag>
