--- a/discovery-service/pom.xml
+++ b/discovery-service/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.nosbielc.mixed.salad</groupId>
     <artifactId>discovery-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.1.0.19052019</version>
     <name>discovery-service</name>
     <description>Spring Boot Discovery Service</description>
 
@@ -102,7 +102,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.1.1</version>
                 <configuration>
-                    <imageName>nosbielc/${project.name}</imageName>
+                    <imageName>nosbielc/mixed-salad-${project.name}</imageName>
                     <baseImage>openjdk:8-jre-alpine</baseImage>
                     <imageTags>
                         <imageTag>${project.version}</imageTag>
