--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.nosbielc.mixed.salad</groupId>
     <artifactId>gateway-service</artifactId>
-    <version>1.0.0.12052019</version>
+    <version>1.1.0.19052019</version>
     <name>gateway-service</name>
     <description>Spring Boot Gateway Service</description>
 
@@ -105,7 +105,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.1.1</version>
                 <configuration>
-                    <imageName>nosbielc/${project.name}</imageName>
+                    <imageName>nosbielc/mixed-salad-${project.name}</imageName>
                     <baseImage>openjdk:8-jre-alpine</baseImage>
                     <imageTags>
                         <imageTag>${project.version}</imageTag>
