--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
             <!--<artifactId>docker-maven-plugin</artifactId>-->
             <!--<version>1.1.1</version>-->
             <!--<configuration>-->
-            <!--<imageName>nosbielc/${project.name}</imageName>-->
+            <!--<imageName>nosbielc/mixed-salad-${project.name}</imageName>-->
             <!--<baseImage>openjdk:8-jre-alpine</baseImage>-->
             <!--<entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>-->
             <!--<exposes>8088</exposes>-->
