Teste CI / Coverage
Teste CI / Coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectVersion=1.0
 
 sonar.host.url=https://sonarcloud.io
 
-sonar.sources=/banco-central-service/src/main
-sonar.tests=/banco-central-service/src/test
+sonar.sources=./banco-central-service/src/main,./admin-service/src/main,./auth-service/src/main,./config-service/src/main,./discovery-service/src/main,./gateway-service/src/main,./zipkin-service/src/main
+sonar.tests=./banco-central-service/src/test,./admin-service/src/test,./auth-service/src/test,./config-service/src/test,./discovery-service/src/test,./gateway-service/src/test,./zipkin-service/src/test
 
 sonar.sourceEncoding=UTF-8
