--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <artifactId>mixed-salad-service</artifactId>
     <version>1.0.0</version>
     <name>MixedSaladService</name>
+    <packaging>pom</packaging>
     <description>Mixed Salad Project for development and study of Java technologies.</description>
 
     <modules>
